<resources>
    <string name="app_name">Redditech</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" />
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search</string>
    <string name="menu_slideshow">Profile</string>
    <string name="HotBtn">Hot</string>
    <string name="NewBtn">New</string>
    <string name="BestBtn">Best</string>
    <string name="CardTitle">Title</string>
    <string name="CardDescription">This is a description</string>
    <string name="sub_name_str">sub_name_str</string>
    <string name="user_name_str">user_name_str</string>
    <string name="post_title_str">post_title_str</string>
    <string name="post_description_str">post_description_str</string>
    <string name="settings">Settings</string>
    <string name="best">Best</string>
    <string name="hot">Hot</string>
    <string name="top">Top</string>
    <string name="sub_name_search_str">sub_name_search_str</string>
    <string name="sign_in_with_reddit">Sign in with reddit</string>
    <string name="subscribe">Subscribe</string>
    <string name="avatarprofile">AvatarProfile</string>
    <string name="username">test</string>
    <string name="description">description</string>
    <string name="profile_picture">profile picture</string>
</resources>