<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/rl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="false"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"

            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/iv_image"

            android:layout_toEndOf="@+id/iv_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sub_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sub_name_str"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/user_name_str"
                android:textColor="@color/grey"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/post_title_str"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/post_description_str"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@mipmap/ic_launcher_round"/>

            <VideoView
                android:id="@+id/post_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>